tests/NormalTests/paczka1/small_fuzzy/61437205.err
Error in line 5: kab8rTQhBX A142 49,2
Error in line 11: FmI9I8 S750 85,17
Error in line 14: cy9LJ S971 8,0
